kubernetes-deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # ingressclass.kubernetes.io/is-default-class: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /v1/models/$1:predict
spec:
  rules:
    - http:
        paths:
        - path: /540/v1/models/(.*):predict
          pathType: Prefix
          backend:
            service:
              name: "svc-540-service"
              port:
                number: 8080
        - path: /559/v1/models/(.*):predict
          pathType: Prefix
          backend:
            service:
              name: "svc-559-service"
              port:
                number: 8081
        - path: /567/v1/models/(.*):predict
          pathType: Prefix
          backend:
            service:
              name: "svc-567-service"
              port:
                number: 8082
        - path: /544/v1/models/(.*):predict
          pathType: Prefix
          backend:
            service:
              name: "svc-544-service"
              port:
                number: 8083
        - path: /552/v1/models/(.*):predict
          pathType: Prefix
          backend:
            service:
              name: "svc-552-service"
              port:
                number: 8084
        - path: /563/v1/models/(.*):predict
          pathType: Prefix
          backend:
            service:
              name: "svc-563-service"
              port:
                number: 8085
